After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 648885 - syndaemon never gets started
syndaemon never gets started
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: mouse
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
: 651603 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-04-28 17:21 UTC by Edward Sheldrake
Modified: 2011-06-10 14:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix syndaemon never getting started (1.05 KB, patch)
2011-04-28 17:21 UTC, Edward Sheldrake
committed Details | Review

Description Edward Sheldrake 2011-04-28 17:21:40 UTC
Created attachment 186832 [details] [review]
Fix syndaemon never getting started

On my system, gnome-settings-daemon never starts syndaemon, regardless of the "Disable touchpad while typing" setting.

I did some investigation: the touchpad_is_present() function was returning FALSE early due to the BadDevice X error caused by trying to open the virtual core pointer / keyboard devices, and not getting up to checking real devices.
Comment 1 Bastien Nocera 2011-05-03 11:36:04 UTC
Fixed in gnome-3-0 and master

Attachment 186832 [details] pushed as 5f6fe7e - Fix syndaemon never getting started
Comment 2 Bastien Nocera 2011-06-10 14:58:00 UTC
*** Bug 651603 has been marked as a duplicate of this bug. ***