Fix syndaemon never getting started

XOpenDevice returns a BadDevice X error for the virtual core pointer / keyboard
devices, and the bug caused other devices to not be checked.

https://bugzilla.gnome.org/show_bug.cgi?id=648885